# text-query

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
include/: query.hpp  text-query.hpp
test/: test.cpp
test/payloads/: input.txt
